@@ -1,4 +1,5 @@
 27 Jul 2018
+fix: format_username can't be used with flash messages hnrs.php
 fix: direct link to post view_topic.php
 replace: file_get_contents() with fetch() tfreak.php
 update: use global $fluent instead of passing it User.php
